@@ -60,6 +60,7 @@ org.apache.tika.parser.code.SourceCodeParser
 org.apache.tika.parser.mat.MatParser
 org.apache.tika.parser.ocr.TesseractOCRParser
 org.apache.tika.parser.gdal.GDALParser
+org.apache.tika.parser.pot.PooledTimeSeriesParser
 org.apache.tika.parser.grib.GribParser
 org.apache.tika.parser.jdbc.SQLite3Parser
 org.apache.tika.parser.isatab.ISArchiveParser
